dark mode hydration error fixed

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,6 +13,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Cantarell:wght@400;700&display=swap');
 
+@font-face{
+  font-family: 'Aileron';
+  src: url("../public/fonts/Aileron-Regular.otf");
+}
+
 
   /* body {
     background: linear-gradient(90deg, #efd5ff 0%, #515ada 100%);
@@ -175,6 +180,11 @@
     border-width: 2pt;
   }
 
+  .grid-letters {
+    display: grid;
+    grid-template-columns: auto 1fr;
+  }
+
   .dark-bg {
     background-image: linear-gradient(-90deg, #0f172a 0%,  #2e1065 100%);
     position: absolute;
@@ -188,7 +198,7 @@
 
 
   .main-bg {
-    background: linear-gradient(90deg, #efd5ff 0%, #515ada 100%);
+    background: linear-gradient(90deg, #d4bbe3 0%, #414cee 100%);
     display: block;
     overflow: auto;
     opacity: 0.95;
@@ -199,6 +209,26 @@
     min-width: 100svw;
     padding: 1rem;
     /* z-index: -10; */
+  }
+
+  .h1-special {
+    h1 {
+      display: inline-block;
+      position: relative;
+    }
+
+    h1:after, h1:before {
+      content: "";
+      position: absolute;
+      height: 1px;
+      width: 200%;
+      top:50%;
+      right: 100%;
+      /* background: black; */
+    }
+    h1:after {
+      left: 100%;
+    }
   }
 
   .exp-card-work {
